Внес правки по рекомендациям наставника

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
         <div class="promo__wrapper">
           <h1 class="promo__title">Функциональное питание для котов</h1>
           <p class="promo__description">Занялся собой? Займись котом!</p>
-          <img class="promo__image" src="../source/img/index__promo.jpg" alt="Баночка Cat Energy Курица" width="552" height="499">
+          <img class="promo__image" src="img/index-promo.jpg" alt="Баночка Cat Energy Курица" width="552" height="499">
           <button class="promo__button" type="button">Подобрать программу</button>
         </div>
       </section>
@@ -84,21 +84,25 @@
             без изнуряющих тренировок! При этом он не менял своих
             привычек и по-прежнему спит по 16 часов в день. </p>
 
-          <dl class="stats__list">
-            <dt class="stats__description">снижение веса</dt>
-            <dd class="stats__number">5 кг</dd>
-            <dt class="stats__description">затрачено времени</dt>
-            <dd class="stats__number">60 дней</dd>
-          </dl>
+          <div class="stats">
+            <dl class="stats__list">
+              <dt class="stats__description">снижение веса</dt>
+              <dd class="stats__number">5 кг</dd>
+              <dt class="stats__description">затрачено времени</dt>
+              <dd class="stats__number">60 дней</dd>
+            </dl>
+          </div>
 
-          <div class="expenses__wrapper">
-            <span class="expenses">Затраты на питание:</span>
-            <span class="expenses__price">15 000 РУБ.</span>
+          <div class="expenses">
+            <div class="expenses__wrapper">
+              <span class="expenses__text">Затраты на питание:</span>
+              <span class="expenses__price">15 000 РУБ.</span>
+            </div>
           </div>
         </div>
 
         <div class="example__cat">
-          <img src="../source/img/index__cat--fat.jpg" alt="Толстый кот" width="560" height="512">
+          <img src="img/index-cat--fat.jpg" alt="Толстый кот" width="560" height="512">
         </div>
       </section>
     </main>
@@ -112,7 +116,7 @@
         </div>
 
         <div class="main-map">
-          <img src="../source/img/index__map.jpg" alt="Местонахождение на карте" width="1440" height="400">
+          <img src="img/index-map.jpg" alt="Местонахождение на карте" width="1440" height="400">
         </div>
 
         <div class="main-footer__bottom">
