--- a/source/index.html
+++ b/source/index.html
@@ -96,13 +96,15 @@
               <dt class="stats__description">затрачено времени</dt>
               <dd class="stats__number">60 дней</dd>
             </dl>
+          </div>
 
+          <div class="expenses">
             <span class="expenses__text">Затраты на питание:</span>
             <span class="expenses__price">15 000 РУБ.</span>
           </div>
         </div>
 
-        <div class="example__cat cat">
+        <div class="cat">
           <img class="cat__image" src="img/index/cat-fat.png" alt="Толстый кот" width="280" height="256">
         </div>
       </section>
