--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,10 +24,10 @@
         </button>
         <ul class="main-header__list">
           <li class="main-header__item">
-            <a class="main-header__link main-header__link--active" href="#">Главная</a>
+            <a class="main-header__link" href="index.html">Главная</a>
           </li>
           <li class="main-header__item">
-            <a class="main-header__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-header__link main-header__link--active" href="#">Каталог продукции</a>
           </li>
           <li class="main-header__item">
             <a class="main-header__link" href="#">Подбор программы</a>
@@ -37,76 +37,176 @@
     </header>
 
     <main class="main-container">
+      <section class="products">
+        <h2 class="products__title">Каталог продукции</h2>
 
-      <section class="promo">
-        <h1 class="promo__title">Функциональное <br> питание для котов</h1>
-        <p class="promo__description">Занялся собой? Займись котом!</p>
-        <img class="promo__image" src="img/index/promo-product.png" alt="Баночка Cat Energy Курица" width="280" height="270">
-        <button class="promo__button" type="button">Подобрать программу</button>
-      </section>
-
-      <section class="catalog">
-        <h2 class="visually-hidden">Каталог</h2>
-
-        <ul class="catalog__list">
-          <li class="catalog__item catalog__slim">
-            <h3 class="catalog__title">Похудение</h3>
-            <p class="catalog__description">Ваш кот весит больше собаки и почти утратил способность
-                  лазить по деревьям? Пора на диету! Cat Energy Slim поможет
-                  вашему питомцу сбросить лишний вес.</p>
-            <a class="catalog__button" href="#">Каталог Slim</a>
-          </li>
-          <li class="catalog__item catalog__pro">
-            <h3 class="catalog__title">Набор массы</h3>
-            <p class="catalog__description">Заработать авторитет среди дворовых котов и даже собак?
-                Серия Cat Energy Pro поможет вашему коту нарастить
-                необходимые мышцы!</p>
-            <a class="catalog__button" href="#">Каталог Pro</a>
-          </li>
-        </ul>
-      </section>
-
-      <section class="job">
-        <div class="job__wrapper">
-          <h2 class="job__title">Как это работает</h2>
-          <ul class="job__list">
-            <li class="job__item job__step-one">Функциональное питание содержит только полезные питательные вещества.</li>
-            <li class="job__item job__step-two">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-            <li class="job__item job__step-three">Замените один-два приема обычной еды на наше функциональное питание.</li>
-            <li class="job__item job__step-four">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="example">
-        <div class="example__wrapper">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой
-              обычный корм на Cat Energy Slim. Отличный результат
-              без изнуряющих тренировок! При этом он не менял своих
-              привычек и по-прежнему спит по 16 часов в день. </p>
-
-          <div class="profit">
-            <div class="stats">
-              <dl class="stats__list">
-                <dt class="stats__description">снижение веса</dt>
-                <dd class="stats__number">5 кг</dd>
-                <dt class="stats__description">затрачено времени</dt>
-                <dd class="stats__number">60 дней</dd>
+        <ul class="products__list">
+          <li class="products__item">
+            <img class="products__img" src="../img/products/ce-pro-chiken-550g.jpg" alt="Cat Energy PRO 500 г" width="68" height="86">
+            <div class="products__item-wrapper">
+              <h3 class="products__name">Cat Energy PRO 500 г</h3>
+              <dl class="specification">
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Масса</dt>
+                  <dd class="specification__value">500 г</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Вкус</dt>
+                  <dd class="specification__value">Курица</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Цена</dt>
+                  <dd class="specification__value">700 ₽</dd>
+                </div>
               </dl>
             </div>
-
-            <div class="expenses">
-              <span class="expenses__text">Затраты на питание:</span>
-              <span class="expenses__price">15 000 РУБ.</span>
+            <button class="products__button" type="button">Заказать</button>
+          </li>
+          <li class="products__item">
+            <img class="products__img" src="../img/products/ce-pro-chiken-1000g.jpg" alt="Cat Energy PRO 1000 г" width="84" height="100">
+            <div class="products__item-wrapper">
+              <h3 class="products__name">Cat Energy PRO 1000 г</h3>
+              <dl class="specification">
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Масса</dt>
+                  <dd class="specification__value">1000 г</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Вкус</dt>
+                  <dd class="specification__value">Курица</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Цена</dt>
+                  <dd class="specification__value">1000 ₽</dd>
+                </div>
+              </dl>
             </div>
-          </div>
-        </div>
+            <button class="products__button" type="button">Заказать</button>
+          </li>
+          <li class="products__item">
+            <img class="products__img" src="../img/products/ce-pro-fish-550g.jpg" alt="Cat Energy PRO 500 г" width="68" height="78">
+            <div class="products__item-wrapper">
+              <h3 class="products__name">Cat Energy PRO 500 г</h3>
+              <dl class="specification">
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Масса</dt>
+                  <dd class="specification__value">500 г</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Вкус</dt>
+                  <dd class="specification__value">Рыба</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Цена</dt>
+                  <dd class="specification__value">700 ₽</dd>
+                </div>
+              </dl>
+            </div>
+            <button class="products__button" type="button">Заказать</button>
+          </li>
+          <li class="products__item">
+            <img class="products__img" src="../img/products/ce-pro-fish-1000g.jpg" alt="Cat Energy PRO 1000 г" width="84" height="100">
+            <div class="products__item-wrapper">
+              <h3 class="products__name">Cat Energy PRO 1000 г</h3>
+              <dl class="specification">
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Масса</dt>
+                  <dd class="specification__value">1000 г</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Вкус</dt>
+                  <dd class="specification__value">Рыба</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Цена</dt>
+                  <dd class="specification__value">1000 ₽</dd>
+                </div>
+              </dl>
+            </div>
+            <button class="products__button" type="button">Заказать</button>
+          </li>
+          <li class="products__item">
+            <img class="products__img" src="../img/products/ce-pro-buckwheat-500g.jpg" alt="Cat Energy slim 500 г" width="68" height="78">
+            <div class="products__item-wrapper">
+              <h3 class="products__name">Cat Energy slim 500 г</h3>
+              <dl class="specification">
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Масса</dt>
+                  <dd class="specification__value">500 г</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Вкус</dt>
+                  <dd class="specification__value">Гречка</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Цена</dt>
+                  <dd class="specification__value">400 ₽</dd>
+                </div>
+              </dl>
+            </div>
+            <button class="products__button" type="button">Заказать</button>
+          </li>
+          <li class="products__item">
+            <img class="products__img" src="../img/products/ce-pro-buckwheat-1000g.jpg" alt="Cat Energy slim 1000 г" width="84" height="100">
+            <div class="products__item-wrapper">
+              <h3 class="products__name">Cat Energy slim 1000 г</h3>
+              <dl class="specification">
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Масса</dt>
+                  <dd class="specification__value">1000 г</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Вкус</dt>
+                  <dd class="specification__value">Гречка</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Цена</dt>
+                  <dd class="specification__value">700 ₽</dd>
+                </div>
+              </dl>
+            </div>
+            <button class="products__button" type="button">Заказать</button>
+          </li>
+          <li class="products__item">
+            <img class="products__img" src="../img/products/ce-pro-rice-500g.jpg" alt="Cat Energy slim 500 г" width="72" height="84">
+            <div class="products__item-wrapper">
+              <h3 class="products__name">Cat Energy slim 500 г</h3>
+              <dl class="specification">
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Масса</dt>
+                  <dd class="specification__value">500 г</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Вкус</dt>
+                  <dd class="specification__value">Рис</dd>
+                </div>
+                <div class="specification__wrapper">
+                  <dt class="specification__name">Цена</dt>
+                  <dd class="specification__value">500 ₽</dd>
+                </div>
+              </dl>
+            </div>
+            <button class="products__button" type="button">Заказать</button>
+          </li>
+          <li class="products__others">
+            <p class="products__others-title">Показать еще 100500 товаров</p>
+            <p class="products__others-text">На самом деле вкусов гораздо больше!</p>
+            <button class="products__button-others products__button-others--disabled" type="button">Показать все</button>
+          </li>
+        </ul>
 
-        <div class="cat">
-          <img class="cat__image" src="img/index/cat-fat.png" alt="Толстый кот" width="280" height="256">
-        </div>
+
+
       </section>
+
+
+
+
+
+
+
+
+
     </main>
 
     <footer class="main-footer">
