Доделывает секцию каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -42,7 +42,11 @@
 
         <ul class="products__list">
           <li class="products__item">
-            <img class="products__img" src="../img/products/ce-pro-chiken-550g.jpg" alt="Cat Energy PRO 500 г" width="68" height="86">
+
+            <div class="products__img-wrapper">
+              <img class="products__img" src="../img/products/ce-pro-chiken-550g.jpg" alt="Cat Energy PRO 500 г" width="68" height="86">
+            </div>
+
             <div class="products__item-wrapper">
               <h3 class="products__name">Cat Energy PRO 500 г</h3>
               <dl class="specification">
@@ -60,10 +64,15 @@
                 </div>
               </dl>
             </div>
+
             <button class="products__button" type="button">Заказать</button>
           </li>
           <li class="products__item">
-            <img class="products__img" src="../img/products/ce-pro-chiken-1000g.jpg" alt="Cat Energy PRO 1000 г" width="84" height="100">
+
+            <div class="products__img-wrapper">
+              <img class="products__img" src="../img/products/ce-pro-chiken-1000g.jpg" alt="Cat Energy PRO 1000 г" width="84" height="100">
+            </div>
+
             <div class="products__item-wrapper">
               <h3 class="products__name">Cat Energy PRO 1000 г</h3>
               <dl class="specification">
@@ -81,10 +90,15 @@
                 </div>
               </dl>
             </div>
+
             <button class="products__button" type="button">Заказать</button>
           </li>
           <li class="products__item">
-            <img class="products__img" src="../img/products/ce-pro-fish-550g.jpg" alt="Cat Energy PRO 500 г" width="68" height="78">
+
+            <div class="products__img-wrapper">
+              <img class="products__img" src="../img/products/ce-pro-fish-550g.jpg" alt="Cat Energy PRO 500 г" width="68" height="78">
+            </div>
+
             <div class="products__item-wrapper">
               <h3 class="products__name">Cat Energy PRO 500 г</h3>
               <dl class="specification">
@@ -102,10 +116,15 @@
                 </div>
               </dl>
             </div>
+
             <button class="products__button" type="button">Заказать</button>
           </li>
           <li class="products__item">
-            <img class="products__img" src="../img/products/ce-pro-fish-1000g.jpg" alt="Cat Energy PRO 1000 г" width="84" height="100">
+
+            <div class="products__img-wrapper">
+              <img class="products__img" src="../img/products/ce-pro-fish-1000g.jpg" alt="Cat Energy PRO 1000 г" width="84" height="100">
+            </div>
+
             <div class="products__item-wrapper">
               <h3 class="products__name">Cat Energy PRO 1000 г</h3>
               <dl class="specification">
@@ -123,10 +142,15 @@
                 </div>
               </dl>
             </div>
+
             <button class="products__button" type="button">Заказать</button>
           </li>
           <li class="products__item">
-            <img class="products__img" src="../img/products/ce-pro-buckwheat-500g.jpg" alt="Cat Energy slim 500 г" width="68" height="78">
+
+            <div class="products__img-wrapper">
+              <img class="products__img" src="../img/products/ce-pro-buckwheat-500g.jpg" alt="Cat Energy slim 500 г" width="68" height="78">
+            </div>
+
             <div class="products__item-wrapper">
               <h3 class="products__name">Cat Energy slim 500 г</h3>
               <dl class="specification">
@@ -144,10 +168,15 @@
                 </div>
               </dl>
             </div>
+
             <button class="products__button" type="button">Заказать</button>
           </li>
           <li class="products__item">
-            <img class="products__img" src="../img/products/ce-pro-buckwheat-1000g.jpg" alt="Cat Energy slim 1000 г" width="84" height="100">
+
+            <div class="products__img-wrapper">
+              <img class="products__img" src="../img/products/ce-pro-buckwheat-1000g.jpg" alt="Cat Energy slim 1000 г" width="84" height="100">
+            </div>
+
             <div class="products__item-wrapper">
               <h3 class="products__name">Cat Energy slim 1000 г</h3>
               <dl class="specification">
@@ -165,10 +194,15 @@
                 </div>
               </dl>
             </div>
+
             <button class="products__button" type="button">Заказать</button>
           </li>
           <li class="products__item">
-            <img class="products__img" src="../img/products/ce-pro-rice-500g.jpg" alt="Cat Energy slim 500 г" width="72" height="84">
+
+            <div class="products__img-wrapper">
+              <img class="products__img" src="../img/products/ce-pro-rice-500g.jpg" alt="Cat Energy slim 500 г" width="72" height="84">
+            </div>
+
             <div class="products__item-wrapper">
               <h3 class="products__name">Cat Energy slim 500 г</h3>
               <dl class="specification">
@@ -186,6 +220,7 @@
                 </div>
               </dl>
             </div>
+            
             <button class="products__button" type="button">Заказать</button>
           </li>
           <li class="products__others">
