Добавляет дополнительные товары

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -220,7 +220,6 @@
                 </div>
               </dl>
             </div>
-            
             <button class="products__button" type="button">Заказать</button>
           </li>
           <li class="products__others">
@@ -229,11 +228,46 @@
             <button class="products__button-others products__button-others--disabled" type="button">Показать все</button>
           </li>
         </ul>
-
-
-
       </section>
 
+      <section class="additional-products">
+        <h2 class="additional-products__title">Дополнительные товары</h2>
+
+        <ul class="additional-products__list">
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <h3 class="additional-products__item-title">Сахарозаменитель</h3>
+              <span class="additional-products__item-text">1 упаковка (100 г)</span>
+              <span class="additional-products__item-price">200 ₽</span>
+            </div>
+            <button class="additional-products__button">Заказать</button>
+          </li>
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <h3 class="additional-products__item-title">Сахарозаменитель</h3>
+              <span class="additional-products__item-text">1 упаковка (100 г)</span>
+              <span class="additional-products__item-price">200 ₽</span>
+            </div>
+            <button class="additional-products__button">Заказать</button>
+          </li>
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <h3 class="additional-products__item-title">Питьевая вода</h3>
+              <span class="additional-products__item-text">5 литров</span>
+              <span class="additional-products__item-price">50 ₽</span>
+            </div>
+            <button class="additional-products__button">Заказать</button>
+          </li>
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <h3 class="additional-products__item-title">Витамины</h3>
+              <span class="additional-products__item-text">1 упаковка (30 г)</span>
+              <span class="additional-products__item-price">300 ₽</span>
+            </div>
+            <button class="additional-products__button">Заказать</button>
+          </li>
+        </ul>
+      </section>
 
 
 
