--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="101" height="18" fill="none" viewBox="0 0 143 27"><path fill="#111" d="M1.8 24.4c-1.3-1.8-2-4-1.8-6.2V8.9c-.2-2.2.4-4.5 1.7-6.3C2.9 1 4.8.4 7.6.4c2.8 0 4.6.7 5.7 2A8 8 0 0 1 15 7.7V10H9.5V7.5c0-.8 0-1.5-.3-2.3a1.6 1.6 0 0 0-1.6-.9c-.8 0-1.3.3-1.6.8-.2.8-.3 1.7-.3 2.5v12c0 .7 0 1.5.4 2.3.3.5.8.8 1.6.8s1.2-.3 1.5-.8l.3-2.4v-2.7H15v2.3c0 2-.5 4-1.7 5.6-1.1 1.3-3 2-5.7 2-2.7-.1-4.7-.8-5.8-2.3ZM21.6.8h6.3l4.7 25.4h-5.1l-1-5.3H23l-.9 5.3h-5.2L21.6.8ZM26 17.5l-1.3-10-1.3 10H26ZM36.5 5h-3.8V.8H46v4.1h-3.8v21.3h-5.7V5ZM56.2.8H66v2.7h-6.3v8.3h5.1v2.6h-5.1v9.4H66v2.5H56V.8h.2ZM69 .8h2.4l7.3 16.8V.8h2.9v25.4h-2.3L72 8.8v17.4h-3V.8ZM85 .8h9.8v2.7h-6.4v8.3h5.1v2.6h-5.1v9.4h6.4v2.5h-9.9V.8ZM97.7.8h5.1c2-.2 4 .4 5.7 1.5 1.2 1 1.8 2.8 1.8 5.2 0 3.2-1 5.2-3.1 5.9l3.5 12.7h-3.4l-3.4-12h-2.8v12h-3.6V.8h.2Zm4.9 11c1.1 0 2.3-.3 3.2-1 .7-.5 1-1.7 1-3.3 0-.9 0-1.7-.3-2.5-.3-.6-.7-1-1.2-1.3-.8-.4-1.7-.5-2.5-.5h-1.6v8.4h1.4v.1ZM114.8 24.3c-1.2-2-1.8-4.2-1.6-6.4V9.4c0-1.6.1-3.3.5-4.8a5.7 5.7 0 0 1 2.2-3c1.2-.7 2.7-1 4.1-1 2.4 0 4 .6 5 1.9a8.5 8.5 0 0 1 1.6 5.5v1h-3.4V8c0-.9 0-1.8-.2-2.7 0-.6-.4-1.2-.9-1.5-.6-.4-1.3-.6-2-.6-.9 0-1.7.2-2.3.7a2.5 2.5 0 0 0-1 1.8l-.1 3v9.5c-.1 1.4.1 2.9.6 4.2.5 1 1.4 1.3 2.7 1.3a2.7 2.7 0 0 0 2.7-1.4c.6-1.4.8-3 .8-4.4v-1.8h-3.3v-2.6h6.5v12.6h-2.2l-.4-2.9a4.6 4.6 0 0 1-4.5 3.3 5.6 5.6 0 0 1-4.8-2.3ZM133.9 17.3 128.4.9h3.3l4 12.3L139.3.9h3.4l-5.5 16.4v9H134v-9h-.1Z"/></svg>
       </a>
 
-      <nav class="main-header__nav main-nav--closed main-nav--nojs">
+      <nav class="main-header__nav main-header__nav--closed main-header__nav--nojs">
         <button class="main-header__burger" type="button">
           <span class="visually-hidden">Меню</span>
         </button>
@@ -149,6 +149,6 @@
         </div>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
