--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,7 +30,7 @@
             <a class="main-header__link" href="#">Каталог продукции</a>
           </li>
           <li class="main-header__item">
-            <a class="main-header__link" href="#">Подбор программы</a>
+            <a class="main-header__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
