--- a/source/form.html
+++ b/source/form.html
@@ -24,88 +24,85 @@
         </button>
         <ul class="main-header__list">
           <li class="main-header__item">
-            <a class="main-header__link main-header__link--active" href="#">Главная</a>
+            <a class="main-header__link main-header__link--active" href="index.html">Главная</a>
           </li>
           <li class="main-header__item">
             <a class="main-header__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-header__item">
-            <a class="main-header__link" href="form.html">Подбор программы</a>
+            <a class="main-header__link" href="#">Подбор программы</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <main class="main-container">
+      <section class="programm-selection">
+        <h2 class="programm-selection__title">Подбор программы</h2>
+        <p class="programm-selection__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
-      <section class="promo">
-        <h1 class="promo__title">Функциональное <br> питание для котов</h1>
-        <p class="promo__description">Занялся собой? Займись котом!</p>
-        <img class="promo__image" src="img/index/promo-product.png" alt="Баночка Cat Energy Курица" width="280" height="270">
-        <button class="promo__button" type="button">Подобрать программу</button>
-      </section>
+        <form class="form" action="https://echo.htmlacademy.ru/" method="post">
 
-      <section class="catalog">
-        <h2 class="visually-hidden">Каталог</h2>
-
-        <ul class="catalog__list">
-          <li class="catalog__item catalog__slim">
-            <h3 class="catalog__title">Похудение</h3>
-            <p class="catalog__description">Ваш кот весит больше собаки и почти утратил способность
-                  лазить по деревьям? Пора на диету! Cat Energy Slim поможет
-                  вашему питомцу сбросить лишний вес.</p>
-            <a class="catalog__button" href="#">Каталог Slim</a>
-          </li>
-          <li class="catalog__item catalog__pro">
-            <h3 class="catalog__title">Набор массы</h3>
-            <p class="catalog__description">Заработать авторитет среди дворовых котов и даже собак?
-                Серия Cat Energy Pro поможет вашему коту нарастить
-                необходимые мышцы!</p>
-            <a class="catalog__button" href="#">Каталог Pro</a>
-          </li>
-        </ul>
-      </section>
-
-      <section class="job">
-        <div class="job__wrapper">
-          <h2 class="job__title">Как это работает</h2>
-          <ul class="job__list">
-            <li class="job__item job__step-one">Функциональное питание содержит только полезные питательные вещества.</li>
-            <li class="job__item job__step-two">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-            <li class="job__item job__step-three">Замените один-два приема обычной еды на наше функциональное питание.</li>
-            <li class="job__item job__step-four">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="example">
-        <div class="example__wrapper">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой
-              обычный корм на Cat Energy Slim. Отличный результат
-              без изнуряющих тренировок! При этом он не менял своих
-              привычек и по-прежнему спит по 16 часов в день. </p>
-
-          <div class="profit">
-            <div class="stats">
-              <dl class="stats__list">
-                <dt class="stats__description">снижение веса</dt>
-                <dd class="stats__number">5 кг</dd>
-                <dt class="stats__description">затрачено времени</dt>
-                <dd class="stats__number">60 дней</dd>
-              </dl>
+          <div class="cat-info">
+            <div class="cat-info__wrapper">
+              <label class="cat-info__label" for="cat-info__cat-name">Имя:*</label>
+              <input class="cat-info__input" placeholder="Барсик" type="text" name="cat-name" id="cat-name" minlength="3" pattern="[А-Яа-яЁё ]+" required >
             </div>
-
-            <div class="expenses">
-              <span class="expenses__text">Затраты на питание:</span>
-              <span class="expenses__price">15 000 РУБ.</span>
+            <div class="cat-info__wrapper">
+              <label class="cat-info__label" for="cat-info__cat-weight">Вес (кг):*</label>
+              <input class="cat-info__input" placeholder="7" type="number" name="cat-weight" id="cat-weight" maxlength="2" required>
+            </div>
+            <div class="cat-info__wrapper">
+              <label class="cat-info__label" for="cat-info__cat-age">Возраст (лет):</label>
+              <input class="cat-info__input" placeholder="7" type="number" name="cat-age" id="cat-age" maxlength="2" required>
             </div>
           </div>
-        </div>
 
-        <div class="cat">
-          <img class="cat__image" src="img/index/cat-fat.png" alt="Толстый кот" width="280" height="256">
-        </div>
+          <fieldset class="target">
+            <legend class="visually-hidden">Цель программы</legend>
+
+            <ul class="target__list">
+              <li class="target__item">
+                <label class="target__label" for="lose-weight">
+                  <input class="visually-hidden target__input" type="radio" id="lose-weight" name="target" value="lose-weight" checked>
+                  <span class="target__input-mark"></span>
+                  Похудение
+                </label>
+              </li>
+
+              <li class="target__item">
+                <label class="target__label" for="weight-gain">
+                  <input class="visually-hidden target__input" type="radio" id="weight-gain" name="target" value="weight-gain">
+                  <span class="target__input-mark"></span>
+                  Набор массы
+                </label>
+              </li>
+
+              <li class="target__item">
+                <label class="target__label" for="help">
+                  <input class="visually-hidden target__input" type="radio" id="help" name="target" value="help">
+                  <span class="target__input-mark"></span>
+                  Не знаю (Нужен ваш совет)
+                </label>
+              </li>
+
+
+
+
+
+            </ul>
+          </fieldset>
+
+
+
+
+
+
+
+
+          <button type="submit">отправить</button>
+        </form>
+
       </section>
     </main>
 
