--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,9 +24,9 @@
         </button>
         <ul class="main-header__list">
           <li class="main-header__item">
-            <a class="main-header__link main-header__link--active" href="index.html">Главная</a>
+            <a class="main-header__link" href="index.html">Главная</a>
           </li>
-          <li class="main-header__item">
+          <li class="main-header__item  main-header__link--active">
             <a class="main-header__link" href="#">Каталог продукции</a>
           </li>
           <li class="main-header__item">
