--- a/source/form.html
+++ b/source/form.html
@@ -24,13 +24,13 @@
         </button>
         <ul class="main-header__list">
           <li class="main-header__item">
-            <a class="main-header__link main-header__link--active" href="index.html">Главная</a>
+            <a class="main-header__link" href="index.html">Главная</a>
           </li>
           <li class="main-header__item">
             <a class="main-header__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-header__item">
-            <a class="main-header__link" href="#">Подбор программы</a>
+            <a class="main-header__link  main-header__link--active" href="#">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -99,6 +99,49 @@
                 <input class="cat-owner__input cat-owner__tel" type="tel" id="tel" name="tel" placeholder="8 (960) 900-60-90" minlength="11" required>
               </div>
             </div>
+          </section>
+
+          <section class="commentary">
+            <h2 class="commentary__title">Комментарий</h2>
+            <textarea class="commentary__text" name="commentary-text" placeholder="Расскажите обо всех повадках кота"></textarea>
+          </section>
+
+          <section class="additional">
+            <fieldset class="additional__fieldset">
+              <legend class="additional__legend">
+                <h2 class="additional__title">Дополнительно</h2>
+              </legend>
+              <ul class="additional__list">
+                <li class="additional__item">
+                  <label class="additional__label" for="sweetener">
+                    <input class="visually-hidden additional__input" id="sweetener" name="additional" value="sweetener" type="checkbox">
+                    <span class="control-mark-check"></span>
+                    Сахарозаменитель
+                  </label>
+                </li>
+                <li class="additional__item">
+                  <label class="additional__label" for="water">
+                    <input class="visually-hidden additional__input" id="water" name="additional" value="water" type="checkbox">
+                    <span class="control-mark-check"></span>
+                    Питьевая вода
+                  </label>
+                </li>
+                <li class="additional__item">
+                  <label class="additional__label" for="milk">
+                    <input class="visually-hidden additional__input" id="milk" name="additional" value="milk" type="checkbox">
+                    <span class="control-mark-check"></span>
+                    Молоко
+                  </label>
+                </li>
+                <li class="additional__item">
+                  <label class="additional__label" for="vitamins">
+                    <input class="visually-hidden additional__input" id="vitamins" name="additional" value="vitamins" type="checkbox">
+                    <span class="control-mark-check"></span>
+                    Витамины
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
           </section>
 
 
