Добавляет планшетную версию форм

--- a/source/form.html
+++ b/source/form.html
@@ -114,7 +114,7 @@
               <ul class="additional__list">
                 <li class="additional__item">
                   <label class="additional__label" for="sweetener">
-                    <input class="visually-hidden additional__input" id="sweetener" name="additional" value="sweetener" type="checkbox">
+                    <input class="visually-hidden additional__input" id="sweetener" name="additional" value="sweetener" type="checkbox" checked>
                     <span class="control-mark-check"></span>
                     Сахарозаменитель
                   </label>
@@ -144,16 +144,8 @@
             </fieldset>
           </section>
 
-
-
-
-
-
-
-
-
-
-          <button type="submit">отправить</button>
+          <button class="form__button" type="submit">отправить</button>
+          <p class="form__required">* — Обязательные поля</p>
         </form>
 
       </section>
