--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-    <meta name="viewport" content="width=device-width, initiale-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+    <head>
+      <meta charset="utf-8">
+      <title>HTML Academy: Кэт энерджи</title>
+      <meta name="viewport" content="width=device-width, initiale-scale=1">
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="icon" href="favicon.ico">
+      <link rel="apple-touch-icon" href="img/favicon/152.png">
+      <link rel="manifest" href="manifest.webmanifest">
+    </head>
 
   <body class="page__body">
 
