--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
     <main class="main-container">
 
       <section class="promo">
-        <h1 class="promo__title">Функциональное <br> питание для котов</h1>
+        <h1 class="promo__title">Функциональное питание для котов</h1>
         <p class="promo__description">Занялся собой? Займись котом!</p>
         <picture>
           <source media="(min-width: 1440px)" srcset="img/index/promo-desktop.png 1x, img/index/promo-desktop@2x.png 2x">
