--- a/source/catalog.html
+++ b/source/catalog.html
@@ -278,14 +278,15 @@
 
         <div class="gift">
           <h2 class="visually-hidden">Подарок</h2>
-          <p class="gift-text">Закажите все и получите чехол для кота в подарок!</p>
+          <p class="gift-text">Закажите все <br>
+            и получите чехол для кота в подарок!</p>
         </div>
       </section>
     </main>
 
     <footer class="main-footer">
       <div class="main-footer__location location">
-        <div class="location__adress adress adress-index">
+        <div class="location__adress adress">
           <p class="adress__call">приглашаем &emsp; &emsp; к сотрудничеству дилеров!</p>
 
           <div class="adress__wrapper">
