--- a/source/form.html
+++ b/source/form.html
@@ -162,7 +162,7 @@
 
     <footer class="main-footer">
       <div class="main-footer__location location">
-        <div class="location__adress adress adress-index">
+        <div class="location__adress adress">
           <p class="adress__call">приглашаем &emsp; &emsp; к сотрудничеству дилеров!</p>
 
           <div class="adress__wrapper">
