--- a/source/index.html
+++ b/source/index.html
@@ -48,12 +48,16 @@
       <section class="promo">
         <h1 class="promo__title">Функциональное питание для котов</h1>
         <p class="promo__description">Занялся собой? Займись котом!</p>
-        <picture>
-          <source media="(min-width: 1440px)" srcset="img/index/promo-desktop.png 1x, img/index/promo-desktop@2x.png 2x">
-          <source media="(min-width: 769px)" srcset="img/index/promo-tablet.png 1x, img/index/promo-tablet@2x.png 2x">
-          <img class="promo__image" src="img/index/promo-mobile.png" srcset="img/index/promo-mobile@2x.png 2x" alt="Баночка Cat Energy Курица" width="280" height="270">
-        </picture>
-        <a class="promo__button" href="form.html">Подобрать программу</a>
+
+        <div class="promo__wrapper">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/index/promo-desktop.png 1x, img/index/promo-desktop@2x.png 2x">
+            <source media="(min-width: 769px)" srcset="img/index/promo-tablet.png 1x, img/index/promo-tablet@2x.png 2x">
+            <img class="promo__image" src="img/index/promo-mobile.png" srcset="img/index/promo-mobile@2x.png 2x" alt="Баночка Cat Energy Курица" width="280" height="270">
+          </picture>
+          <a class="promo__button" href="form.html">Подобрать программу</a>
+        </div>
+
       </section>
 
       <section class="catalog">
