--- a/source/form.html
+++ b/source/form.html
@@ -17,12 +17,12 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo/logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 769px)" srcset="img/logo/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__hero-logo" src="img/logo/logo-mobile.svg" alt="Логотип компании" width="33" height="38">
+          <img class="main-header__hero-logo" src="img/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="33" height="38">
         </picture>
       </a>
 
       <a class="main-header__logo-link-text" href="#">
-        <img src="img/logo/cat-energy-text.svg" alt="Кэт Энерджи" width="101" height="18">
+        <img src="img/logo/cat-energy-text.svg" alt="Cat Energy текст" width="101" height="18">
       </a>
 
       <nav class="main-header__nav main-header__nav--closed main-header__nav--nojs">
@@ -105,7 +105,7 @@
               </div>
               <div class="cat-owner__container">
                 <label class="cat-owner__label" for="tel">Телефон:*</label>
-                <input class="cat-owner__input cat-owner__tel" type="tel" id="tel" name="tel" placeholder="8 (960) 900-60-90" minlength="11" maxlength="11"required>
+                <input class="cat-owner__input cat-owner__tel" type="tel" id="tel" name="tel" placeholder="8 (960) 900-60-90" minlength="11" maxlength="11" required>
               </div>
             </div>
           </section>
@@ -162,7 +162,7 @@
 
     <footer class="main-footer">
       <div class="main-footer__location location">
-        <div class="location__adress adress adress-index">
+        <div class="location__adress adress">
           <p class="adress__call">приглашаем &emsp; &emsp; к сотрудничеству дилеров!</p>
 
           <div class="adress__wrapper">
@@ -200,7 +200,7 @@
 
         <div class="bottom__copyright copyright">
           <a class="copyright__link" href="#">HTML Academy
-            <svg class="copyright__link-img" xmlns="http://www.w3.org/2000/svg" width="27" height="34" fill="none" viewBox="0 0 27 34"><g clip-path="url(#a)">
+            <svg class="copyright__link-img" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Логотип разработчика" width="27" height="34" fill="none" viewBox="0 0 27 34">
               <path fill="#666" d="M13.64.02 13.5 0 0 1.4v24.61L13.5 34 27 26.01V1.41L13.64 0Zm11.6 25L13.5 31.96 1.77 25.02v-10.1l11.68 6.93.02 1.25-8.02-4.75v1.23l8.04 4.8.02 1.3-8.05-4.76v1.22l8.04 4.81 8.12-4.83V16.9l3.62-2.15v10.26Zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.23 6.04 3.57-.06.03-.13.07-.86.5-4.98-2.95-.01 1.22 3.93 2.33-.93.61-.02.01-2.97-1.74-.01 1.23 1.94 1.13-1.98 1.19L1.8 13.58l11.63-6.96 11.8 6.83Zm0-1.22L13.43 5.3 1.77 12.22V2.99L13.5 1.76 25.23 3v9.24Z"/>
             </svg>
           </a>
