Проверяет по PX 1 страницу

--- a/source/form.html
+++ b/source/form.html
@@ -99,13 +99,13 @@
           <section class="cat-owner">
             <h2 class="cat-owner__title">Контактные данные (владельца кота)</h2>
             <div class="cat-owner__wrapper">
-              <div class="cat-owner__container">
+              <div class="cat-owner__container cat-owner__container--email">
                 <label class="cat-owner__label" for="email">E-mail:*</label>
-                <input class="cat-owner__input cat-owner__email" type="email" id="email" name="email" placeholder="kuklachev@gmail.com" required>
+                <input class="cat-owner__input" type="email" id="email" name="email" placeholder="kuklachev@gmail.com" required>
               </div>
-              <div class="cat-owner__container">
+              <div class="cat-owner__container cat-owner__container--tel">
                 <label class="cat-owner__label" for="tel">Телефон:*</label>
-                <input class="cat-owner__input cat-owner__tel" type="tel" id="tel" name="tel" placeholder="8 (960) 900-60-90" minlength="11" maxlength="11" required>
+                <input class="cat-owner__input" type="tel" id="tel" name="tel" placeholder="8 (960) 900-60-90" maxlength="11" required>
               </div>
             </div>
           </section>
