--- a/source/index.html
+++ b/source/index.html
@@ -17,12 +17,12 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo/logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 769px)" srcset="img/logo/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__hero-logo" src="img/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="33" height="38">
+          <img class="main-header__hero-logo" src="img/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="34" height="38">
         </picture>
       </a>
 
       <a class="main-header__logo-link-text" href="#">
-        <img src="img/logo/cat-energy-text.svg" alt="Cat Energy текст" width="101" height="18">
+        <img class="main-header__text-logo" src="img/logo/cat-energy-text.svg" alt="Cat Energy текст" width="102" height="19">
       </a>
 
       <nav class="main-header__nav main-header__nav--closed main-header__nav--nojs">
