Проверка всего по PP и добавляет слайдер

--- a/source/form.html
+++ b/source/form.html
@@ -22,7 +22,7 @@
       </a>
 
       <a class="main-header__logo-link-text" href="#">
-        <img src="img/logo/cat-energy-text.svg" alt="Cat Energy текст" width="101" height="18">
+        <img class="main-header__text-logo" src="img/logo/cat-energy-text.svg" alt="Cat Energy текст" width="102" height="19">
       </a>
 
       <nav class="main-header__nav main-header__nav--closed main-header__nav--nojs">
@@ -105,7 +105,7 @@
               </div>
               <div class="cat-owner__container cat-owner__container--tel">
                 <label class="cat-owner__label" for="tel">Телефон:*</label>
-                <input class="cat-owner__input" type="tel" id="tel" name="tel" placeholder="8 (960) 900-60-90" maxlength="11" required>
+                <input class="cat-owner__input" type="tel" id="tel" name="tel" placeholder="8 (960) 900-60-90" minlength="11" maxlength="11" required>
               </div>
             </div>
           </section>
