--- a/source/index.html
+++ b/source/index.html
@@ -123,10 +123,22 @@
         </div>
 
         <div class="cat">
-          <picture>
-            <source media="(min-width: 769px)" srcset="img/index/cat-fat-tablet.png 1x, img/index/cat-fat-tablet@2x.png 2x">
-            <img class="cat__image" src="img/index/cat-fat-mobile.png" srcset="img/index/cat-fat-mobile@2x.png 2x" alt="Полный кот" width="280" height="256">
-          </picture>
+          <button class="cat__slider"><span class="cat__slider-arrow"></span></button>
+
+          <div class="cat__before">
+            <picture>
+              <source media="(min-width: 769px)" srcset="../img/index/cat-fat-tablet.png 1x, ../img/index/cat-fat-tablet@2x.png 2x" width="560px" height="512px">
+              <img src="../img/index/cat-fat-mobile.png" srcset="../img/index/cat-fat-mobile@2x.png 2x" alt="Толстый кот до" width="280px" height="256px">
+            </picture>
+          </div>
+
+          <div class="cat__after">
+            <picture>
+              <source media="(min-width: 769px)" srcset="../img/index/cat-skinny-tablet.png 1x, ../img/index/cat-skinny-tablet@2x.png 2x" width="560px" height="512px">
+              <img src="../img/index/cat-skinny-mobile.png" srcset="../img/index/cat-skinny-mobile@2x.png 2x" alt="Худой кот после" width="280px" height="256px">
+            </picture>
+          </div>
+
         </div>
       </section>
     </main>
