--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,7 +22,7 @@
       </a>
 
       <a class="main-header__logo-link-text" href="#">
-        <img src="img/logo/cat-energy-text.svg" alt="Cat Energy текст" width="101" height="18">
+        <img class="main-header__text-logo" src="img/logo/cat-energy-text.svg" alt="Cat Energy текст" width="102" height="19">
       </a>
 
       <nav class="main-header__nav main-header__nav--closed main-header__nav--nojs">
@@ -51,7 +51,11 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-chicken-500g.png" srcset="../img/products/ce-pro-chicken-500g@2x.png 2x" alt="Cat Energy PRO 500г с курицей" width="68" height="86">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/products/ce-pro-chicken-500g-desktop.png 1x, img/products/ce-pro-chicken-500g-desktop@2x.png 2x" width="161" height="172">
+                <source media="(min-width: 769px)" srcset="img/products/ce-pro-chicken-500g-tablet.png 1x, img/products/ce-pro-chicken-500g-tablet@2x.png 2x" width="161" height="172">
+                <img class="products__img" src="img/products/ce-pro-chicken-500g-mobile.png" srcset="img/products/ce-pro-chicken-500g-mobile@2x.png 2x" alt="Cat Energy PRO 500г с курицей" width="68" height="86">
+              </picture>
             </div>
 
             <div class="products__item-wrapper">
@@ -77,7 +81,11 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-chicken-1000g.png" srcset="../img/products/ce-pro-chicken-1000g@2x.png 2x" alt="Cat Energy PRO 1000г с курицей" width="84" height="100">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/products/ce-pro-chicken-1000g-desktop.png 1x, img/products/ce-pro-chicken-1000g-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 769px)" srcset="img/products/ce-pro-chicken-1000g-tablet.png 1x, img/products/ce-pro-chicken-1000g-tablet@2x.png 2x" width="168" height="206">
+                <img class="products__img" src="img/products/ce-pro-chicken-1000g-mobile.png" srcset="img/products/ce-pro-chicken-1000g-mobile@2x.png 2x" alt="Cat Energy PRO 1000г с курицей" width="84" height="100">
+              </picture>
             </div>
 
             <div class="products__item-wrapper">
@@ -103,7 +111,11 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-fish-500g.png" srcset="../img/products/ce-pro-fish-500g@2x.png 2x" alt="Cat Energy PRO 500г с рыбой" width="68" height="78">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/products/ce-pro-fish-500g-desktop.png 1x, img/products/ce-pro-fish-500g-desktop@2x.png 2x" width="163" height="174">
+                <source media="(min-width: 769px)" srcset="img/products/ce-pro-fish-500g-tablet.png 1x, img/products/ce-pro-fish-500g-tablet@2x.png 2x" width="163" height="174">
+                <img class="products__img" src="img/products/ce-pro-fish-500g-mobile.png" srcset="img/products/ce-pro-fish-500g-mobile@2x.png 2x" alt="Cat Energy PRO 500г с рыбой" width="68" height="78">
+              </picture>
             </div>
 
             <div class="products__item-wrapper">
@@ -129,7 +141,11 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-pro-fish-1000g.png" srcset="../img/products/ce-pro-fish-1000g@2x.png 2x" alt="Cat Energy PRO 1000г с рыбой" width="84" height="100">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/products/ce-pro-fish-1000g-desktop.png 1x, img/products/ce-pro-fish-1000g-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 769px)" srcset="img/products/ce-pro-fish-1000g-tablet.png 1x, img/products/ce-pro-fish-1000g-tablet@2x.png 2x" width="168" height="200">
+                <img class="products__img" src="img/products/ce-pro-fish-1000g-mobile.png" srcset="img/products/ce-pro-fish-1000g-mobile@2x.png 2x" alt="Cat Energy PRO 1000г с рыбой" width="84" height="100">
+              </picture>
             </div>
 
             <div class="products__item-wrapper">
@@ -155,7 +171,11 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-slim-buckwheat-500g.png" srcset="../img/products/ce-slim-buckwheat-500g@2x.png 2x" alt="Cat Energy slim 500г с гречкой" width="68" height="78">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/products/ce-slim-buckwheat-500g-desktop.png 1x, img/products/ce-slim-buckwheat-500g-desktop@2x.png 2x" width="161" height="171">
+                <source media="(min-width: 769px)" srcset="img/products/ce-slim-buckwheat-500g-tablet.png 1x, img/products/ce-slim-buckwheat-500g-tablet@2x.png 2x" width="161" height="171">
+                <img class="products__img" src="img/products/ce-slim-buckwheat-500g-mobile.png" srcset="img/products/ce-slim-buckwheat-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г с гречкой" width="68" height="78">
+              </picture>
             </div>
 
             <div class="products__item-wrapper">
@@ -181,7 +201,11 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-slim-buckwheat-1000g.png" srcset="../img/products/ce-slim-buckwheat-1000g@2x.png 2x" alt="Cat Energy slim 1000г с гречкой" width="84" height="100">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/products/ce-slim-buckwheat-1000g-desktop.png 1x, img/products/ce-slim-buckwheat-1000g-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 769px)" srcset="img/products/ce-slim-buckwheat-1000g-tablet.png 1x, img/products/ce-slim-buckwheat-1000g-tablet@2x.png 2x" width="168" height="200">
+                <img class="products__img" src="img/products/ce-slim-buckwheat-1000g-mobile.png" srcset="../img/products/ce-slim-buckwheat-1000g-mobile@2x.png 2x" alt="Cat Energy slim 1000г с гречкой" width="84" height="100">
+              </picture>
             </div>
 
             <div class="products__item-wrapper">
@@ -207,7 +231,11 @@
           <li class="products__item">
 
             <div class="products__img-wrapper">
-              <img class="products__img" src="../img/products/ce-slim-rice-500g.png" srcset="../img/products/ce-slim-rice-500g@2x.png 2x" alt="Cat Energy slim 500г c рисом" width="72" height="84">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/products/ce-slim-rice-500g-desktop.png 1x, img/products/ce-slim-rice-500g-desktop@2x.png 1x" width="163" height="174">
+                <source media="(min-width: 769px)" srcset="img/products/ce-slim-rice-500g-tablet.png 1x, img/products/ce-slim-rice-500g-tablet@2x.png 2x" width="163" height="174">
+                <img class="products__img" src="img/products/ce-slim-rice-500g-mobile.png" srcset="img/products/ce-slim-rice-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г c рисом" width="72" height="84">
+              </picture>
             </div>
 
             <div class="products__item-wrapper">
@@ -251,17 +279,17 @@
           </li>
           <li class="additional-products__item">
             <div class="additional-products__item-wrapper">
-              <h3 class="additional-products__item-title">Сахарозаменитель</h3>
-              <span class="additional-products__item-text">1 упаковка (100 г)</span>
-              <span class="additional-products__item-price">200 ₽</span>
+              <h3 class="additional-products__item-title">Питьевая вода</h3>
+              <span class="additional-products__item-text">5 литров</span>
+              <span class="additional-products__item-price">50 ₽</span>
             </div>
             <button class="additional-products__button" type="button">Заказать</button>
           </li>
           <li class="additional-products__item">
             <div class="additional-products__item-wrapper">
-              <h3 class="additional-products__item-title">Питьевая вода</h3>
-              <span class="additional-products__item-text">5 литров</span>
-              <span class="additional-products__item-price">50 ₽</span>
+              <h3 class="additional-products__item-title">Молоко</h3>
+              <span class="additional-products__item-text">1 литр</span>
+              <span class="additional-products__item-price">100 ₽</span>
             </div>
             <button class="additional-products__button" type="button">Заказать</button>
           </li>
