--- a/source/index.html
+++ b/source/index.html
@@ -130,12 +130,12 @@
           <div class="cat__before">
             <picture>
               <source media="(min-width: 769px)" srcset="../img/index/cat-fat-tablet.png 1x, ../img/index/cat-fat-tablet@2x.png 2x" width="560px" height="512px">
-              <img src="../img/index/cat-fat-mobile.png" srcset="../img/index/cat-fat-mobile@2x.png 2x" alt="Полный кот Борис до" width="280px" height="256px">
+              <img class="cat__before-img" src="../img/index/cat-fat-mobile.png" srcset="../img/index/cat-fat-mobile@2x.png 2x" alt="Полный кот Борис до" width="280px" height="256px">
             </picture>
           </div>
 
           <div class="cat__slider">
-            <button class="cat__slider-button">
+            <button class="cat__slider-button" aria-label="Слайдер">
               <span class="visually-hidden">Ползунок слайдера</span>
             </button>
           </div>
@@ -143,7 +143,7 @@
           <div class="cat__after">
             <picture>
               <source media="(min-width: 769px)" srcset="../img/index/cat-skinny-tablet.png 1x, ../img/index/cat-skinny-tablet@2x.png 2x" width="560px" height="512px">
-              <img src="../img/index/cat-skinny-mobile.png" srcset="../img/index/cat-skinny-mobile@2x.png 2x" alt="Худой кот Борис после" width="280px" height="256px">
+              <img class="cat__after-img" src="../img/index/cat-skinny-mobile.png" srcset="../img/index/cat-skinny-mobile@2x.png 2x" alt="Худой кот Борис после" width="280px" height="256px">
             </picture>
           </div>
 
