--- a/source/form.html
+++ b/source/form.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initiale-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon/152.png">
+    <link rel="apple-touch-icon" href="/img/favicon/152.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
 
@@ -15,15 +15,15 @@
     <header class="main-header main-header--nojs">
       <a class="main-header__logo-link" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo/logo-desktop.svg" width="202" height="59">
-          <source media="(min-width: 769px)" srcset="img/logo/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__hero-logo" src="img/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="33" height="38">
+          <source media="(min-width: 1440px)" srcset="/img/logo/logo-desktop.svg" width="202" height="59">
+          <source media="(min-width: 769px)" srcset="/img/logo/logo-tablet.svg" width="174" height="52">
+          <img class="main-header__hero-logo" src="/img/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="33" height="38">
         </picture>
       </a>
 
       <a class="main-header__logo-link-text" href="#">
         <svg class="main-header__text-logo" width="102" height="19" role="img" aria-label="Логотип Cat Energy">
-          <use href="../img/sprite.svg#logo-text"></use>
+          <use href="/img/sprite.svg#logo-text"></use>
         </svg>
       </a>
 
@@ -181,7 +181,7 @@
       <div class="main-footer__bottom bottom">
         <a class="bottom__link" href="#">
           <svg class="bottom__link-img" width="143" height="24" role="img" aria-label="Логотип Cat Energy">
-            <use href="../img/sprite.svg#logo-text"></use>
+            <use href="/img/sprite.svg#logo-text"></use>
           </svg>
         </a>
 
@@ -203,7 +203,7 @@
         <div class="bottom__copyright copyright">
           <a class="copyright__link" href="#" aria-label="Сайт разработчика">HTML Academy
             <svg class="copyright__link-img" width="27" height="34" role="img">
-              <use href="../img/sprite.svg#logo-html"></use>>
+              <use href="/img/sprite.svg#logo-html"></use>
             </svg>
           </a>
         </div>
