--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initiale-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon/152.png">
+    <link rel="apple-touch-icon" href="/img/favicon/152.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
 
@@ -15,15 +15,15 @@
     <header class="main-header main-header--nojs">
       <a class="main-header__logo-link" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" srcset="../img/logo/logo-desktop.svg" width="202" height="59">
-          <source media="(min-width: 769px)" srcset="../img/logo/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__hero-logo" src="../img/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="34" height="38">
+          <source media="(min-width: 1440px)" srcset="/img/logo/logo-desktop.svg" width="202" height="59">
+          <source media="(min-width: 769px)" srcset="/img/logo/logo-tablet.svg" width="174" height="52">
+          <img class="main-header__hero-logo" src="/img/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="34" height="38">
         </picture>
       </a>
 
       <a class="main-header__logo-link-text" href="#">
         <svg class="main-header__text-logo" width="102" height="19" role="img" aria-label="Логотип Cat Energy">
-          <use href="../img/sprite.svg#logo-text"></use>
+          <use href="/img/sprite.svg#logo-text"></use>
         </svg>
       </a>
 
@@ -53,9 +53,9 @@
 
         <div class="promo__wrapper">
           <picture>
-            <source media="(min-width: 1440px)" srcset="img/index/promo-desktop.png 1x, img/index/promo-desktop@2x.png 2x">
-            <source media="(min-width: 769px)" srcset="img/index/promo-tablet.png 1x, img/index/promo-tablet@2x.png 2x">
-            <img class="promo__image" src="img/index/promo-mobile.png" srcset="img/index/promo-mobile@2x.png 2x" alt="Баночка Cat Energy Курица" width="280" height="270">
+            <source media="(min-width: 1440px)" srcset="/img/index/promo-desktop.png 1x, /img/index/promo-desktop@2x.png 2x">
+            <source media="(min-width: 769px)" srcset="/img/index/promo-tablet.png 1x, /img/index/promo-tablet@2x.png 2x">
+            <img class="promo__image" src="/img/index/promo-mobile.png" srcset="/img/index/promo-mobile@2x.png 2x" alt="Баночка Cat Energy Курица" width="280" height="270">
           </picture>
           <a class="promo__button" href="form.html">Подобрать программу</a>
         </div>
@@ -129,8 +129,8 @@
 
           <div class="cat__before">
             <picture>
-              <source media="(min-width: 769px)" srcset="../img/index/cat-fat-tablet.png 1x, ../img/index/cat-fat-tablet@2x.png 2x" width="560px" height="512px">
-              <img class="cat__before-img" src="../img/index/cat-fat-mobile.png" srcset="../img/index/cat-fat-mobile@2x.png 2x" alt="Полный кот Борис до" width="280px" height="256px">
+              <source media="(min-width: 769px)" srcset="/img/index/cat-fat-tablet.png 1x, /img/index/cat-fat-tablet@2x.png 2x" width="560" height="512">
+              <img class="cat__before-img" src="/img/index/cat-fat-mobile.png" srcset="/img/index/cat-fat-mobile@2x.png 2x" alt="Полный кот Борис до" width="280" height="256">
             </picture>
           </div>
 
@@ -142,8 +142,8 @@
 
           <div class="cat__after">
             <picture>
-              <source media="(min-width: 769px)" srcset="../img/index/cat-skinny-tablet.png 1x, ../img/index/cat-skinny-tablet@2x.png 2x" width="560px" height="512px">
-              <img class="cat__after-img" src="../img/index/cat-skinny-mobile.png" srcset="../img/index/cat-skinny-mobile@2x.png 2x" alt="Худой кот Борис после" width="280px" height="256px">
+              <source media="(min-width: 769px)" srcset="/img/index/cat-skinny-tablet.png 1x, /img/index/cat-skinny-tablet@2x.png 2x" width="560" height="512">
+              <img class="cat__after-img" src="/img/index/cat-skinny-mobile.png" srcset="/img/index/cat-skinny-mobile@2x.png 2x" alt="Худой кот Борис после" width="280" height="256">
             </picture>
           </div>
 
@@ -171,7 +171,7 @@
       <div class="main-footer__bottom bottom">
         <a class="bottom__link" href="#">
           <svg class="bottom__link-img" width="143" height="24" role="img" aria-label="Логотип Cat Energy">
-            <use href="../img/sprite.svg#logo-text"></use>
+            <use href="/img/sprite.svg#logo-text"></use>
           </svg>
         </a>
 
@@ -193,7 +193,7 @@
         <div class="bottom__copyright copyright">
           <a class="copyright__link" href="#" aria-label="Сайт разработчика">HTML Academy
             <svg class="copyright__link-img" width="27" height="34" role="img">
-              <use href="../img/sprite.svg#logo-html"></use>>
+              <use href="/img/sprite.svg#logo-html"></use>
             </svg>
           </a>
         </div>
