--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initiale-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="favicon.ico">
-    <link rel="apple-touch-icon" href="img/favicon/152.png">
+    <link rel="apple-touch-icon" href="/img/favicon/152.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
 
@@ -15,15 +15,15 @@
     <header class="main-header main-header--nojs">
       <a class="main-header__logo-link" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo/logo-desktop.svg" width="202" height="59">
-          <source media="(min-width: 769px)" srcset="img/logo/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__hero-logo" src="img/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="33" height="38">
+          <source media="(min-width: 1440px)" srcset="/img/logo/logo-desktop.svg" width="202" height="59">
+          <source media="(min-width: 769px)" srcset="/img/logo/logo-tablet.svg" width="174" height="52">
+          <img class="main-header__hero-logo" src="/img/logo/logo-mobile.svg" alt="Логотип Cat Energy" width="33" height="38">
         </picture>
       </a>
 
       <a class="main-header__logo-link-text" href="#">
         <svg class="main-header__text-logo" width="102" height="19" role="img" aria-label="Логотип Cat Energy">
-          <use href="../img/sprite.svg#logo-text"></use>
+          <use href="/img/sprite.svg#logo-text"></use>
         </svg>
       </a>
 
@@ -54,9 +54,9 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/products/ce-pro-chicken-500g-desktop.png 1x, img/products/ce-pro-chicken-500g-desktop@2x.png 2x" width="161" height="172">
-                <source media="(min-width: 769px)" srcset="img/products/ce-pro-chicken-500g-tablet.png 1x, img/products/ce-pro-chicken-500g-tablet@2x.png 2x" width="161" height="172">
-                <img class="products__img" src="img/products/ce-pro-chicken-500g-mobile.png" srcset="img/products/ce-pro-chicken-500g-mobile@2x.png 2x" alt="Cat Energy PRO 500г с курицей" width="68" height="86">
+                <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-500g-desktop.png 1x, /img/products/ce-pro-chicken-500g-desktop@2x.png 2x" width="161" height="172">
+                <source media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-500g-tablet.png 1x, /img/products/ce-pro-chicken-500g-tablet@2x.png 2x" width="161" height="172">
+                <img class="products__img" src="/img/products/ce-pro-chicken-500g-mobile.png" srcset="/img/products/ce-pro-chicken-500g-mobile@2x.png 2x" alt="Cat Energy PRO 500г с курицей" width="68" height="86">
               </picture>
             </div>
 
@@ -84,9 +84,9 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/products/ce-pro-chicken-1000g-desktop.png 1x, img/products/ce-pro-chicken-1000g-desktop@2x.png 2x" width="172" height="196">
-                <source media="(min-width: 769px)" srcset="img/products/ce-pro-chicken-1000g-tablet.png 1x, img/products/ce-pro-chicken-1000g-tablet@2x.png 2x" width="168" height="206">
-                <img class="products__img" src="img/products/ce-pro-chicken-1000g-mobile.png" srcset="img/products/ce-pro-chicken-1000g-mobile@2x.png 2x" alt="Cat Energy PRO 1000г с курицей" width="84" height="100">
+                <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-1000g-desktop.png 1x, /img/products/ce-pro-chicken-1000g-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-1000g-tablet.png 1x, /img/products/ce-pro-chicken-1000g-tablet@2x.png 2x" width="168" height="206">
+                <img class="products__img" src="/img/products/ce-pro-chicken-1000g-mobile.png" srcset="/img/products/ce-pro-chicken-1000g-mobile@2x.png 2x" alt="Cat Energy PRO 1000г с курицей" width="84" height="100">
               </picture>
             </div>
 
@@ -114,9 +114,9 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/products/ce-pro-fish-500g-desktop.png 1x, img/products/ce-pro-fish-500g-desktop@2x.png 2x" width="163" height="174">
-                <source media="(min-width: 769px)" srcset="img/products/ce-pro-fish-500g-tablet.png 1x, img/products/ce-pro-fish-500g-tablet@2x.png 2x" width="163" height="174">
-                <img class="products__img" src="img/products/ce-pro-fish-500g-mobile.png" srcset="img/products/ce-pro-fish-500g-mobile@2x.png 2x" alt="Cat Energy PRO 500г с рыбой" width="68" height="78">
+                <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-500g-desktop.png 1x, /img/products/ce-pro-fish-500g-desktop@2x.png 2x" width="163" height="174">
+                <source media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-500g-tablet.png 1x, /img/products/ce-pro-fish-500g-tablet@2x.png 2x" width="163" height="174">
+                <img class="products__img" src="/img/products/ce-pro-fish-500g-mobile.png" srcset="/img/products/ce-pro-fish-500g-mobile@2x.png 2x" alt="Cat Energy PRO 500г с рыбой" width="68" height="78">
               </picture>
             </div>
 
@@ -144,9 +144,9 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/products/ce-pro-fish-1000g-desktop.png 1x, img/products/ce-pro-fish-1000g-desktop@2x.png 2x" width="172" height="196">
-                <source media="(min-width: 769px)" srcset="img/products/ce-pro-fish-1000g-tablet.png 1x, img/products/ce-pro-fish-1000g-tablet@2x.png 2x" width="168" height="200">
-                <img class="products__img" src="img/products/ce-pro-fish-1000g-mobile.png" srcset="img/products/ce-pro-fish-1000g-mobile@2x.png 2x" alt="Cat Energy PRO 1000г с рыбой" width="84" height="100">
+                <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-1000g-desktop.png 1x, /img/products/ce-pro-fish-1000g-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-1000g-tablet.png 1x, /img/products/ce-pro-fish-1000g-tablet@2x.png 2x" width="168" height="200">
+                <img class="products__img" src="/img/products/ce-pro-fish-1000g-mobile.png" srcset="/img/products/ce-pro-fish-1000g-mobile@2x.png 2x" alt="Cat Energy PRO 1000г с рыбой" width="84" height="100">
               </picture>
             </div>
 
@@ -174,9 +174,9 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/products/ce-slim-buckwheat-500g-desktop.png 1x, img/products/ce-slim-buckwheat-500g-desktop@2x.png 2x" width="161" height="171">
-                <source media="(min-width: 769px)" srcset="img/products/ce-slim-buckwheat-500g-tablet.png 1x, img/products/ce-slim-buckwheat-500g-tablet@2x.png 2x" width="161" height="171">
-                <img class="products__img" src="img/products/ce-slim-buckwheat-500g-mobile.png" srcset="img/products/ce-slim-buckwheat-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г с гречкой" width="68" height="78">
+                <source media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-500g-desktop.png 1x, /img/products/ce-slim-buckwheat-500g-desktop@2x.png 2x" width="161" height="171">
+                <source media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-500g-tablet.png 1x, /img/products/ce-slim-buckwheat-500g-tablet@2x.png 2x" width="161" height="171">
+                <img class="products__img" src="/img/products/ce-slim-buckwheat-500g-mobile.png" srcset="/img/products/ce-slim-buckwheat-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г с гречкой" width="68" height="78">
               </picture>
             </div>
 
@@ -204,9 +204,9 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/products/ce-slim-buckwheat-1000g-desktop.png 1x, img/products/ce-slim-buckwheat-1000g-desktop@2x.png 2x" width="172" height="196">
-                <source media="(min-width: 769px)" srcset="img/products/ce-slim-buckwheat-1000g-tablet.png 1x, img/products/ce-slim-buckwheat-1000g-tablet@2x.png 2x" width="168" height="200">
-                <img class="products__img" src="img/products/ce-slim-buckwheat-1000g-mobile.png" srcset="../img/products/ce-slim-buckwheat-1000g-mobile@2x.png 2x" alt="Cat Energy slim 1000г с гречкой" width="84" height="100">
+                <source media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-1000g-desktop.png 1x, /img/products/ce-slim-buckwheat-1000g-desktop@2x.png 2x" width="172" height="196">
+                <source media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-1000g-tablet.png 1x, /img/products/ce-slim-buckwheat-1000g-tablet@2x.png 2x" width="168" height="200">
+                <img class="products__img" src="/img/products/ce-slim-buckwheat-1000g-mobile.png" srcset="/img/products/ce-slim-buckwheat-1000g-mobile@2x.png 2x" alt="Cat Energy slim 1000г с гречкой" width="84" height="100">
               </picture>
             </div>
 
@@ -234,9 +234,9 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/products/ce-slim-rice-500g-desktop.png 1x, img/products/ce-slim-rice-500g-desktop@2x.png 1x" width="163" height="174">
-                <source media="(min-width: 769px)" srcset="img/products/ce-slim-rice-500g-tablet.png 1x, img/products/ce-slim-rice-500g-tablet@2x.png 2x" width="163" height="174">
-                <img class="products__img" src="img/products/ce-slim-rice-500g-mobile.png" srcset="img/products/ce-slim-rice-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г c рисом" width="72" height="84">
+                <source media="(min-width: 1440px)" srcset="/img/products/ce-slim-rice-500g-desktop.png 1x, /img/products/ce-slim-rice-500g-desktop@2x.png 2x" width="163" height="174">
+                <source media="(min-width: 769px)" srcset="/img/products/ce-slim-rice-500g-tablet.png 1x, /img/products/ce-slim-rice-500g-tablet@2x.png 2x" width="163" height="174">
+                <img class="products__img" src="/img/products/ce-slim-rice-500g-mobile.png" srcset="/img/products/ce-slim-rice-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г c рисом" width="72" height="84">
               </picture>
             </div>
 
@@ -332,7 +332,7 @@
       <div class="main-footer__bottom bottom">
         <a class="bottom__link" href="#">
           <svg class="bottom__link-img" width="143" height="24" role="img" aria-label="Логотип Cat Energy">
-            <use href="../img/sprite.svg#logo-text"></use>
+            <use href="/img/sprite.svg#logo-text"></use>
           </svg>
         </a>
 
@@ -354,7 +354,7 @@
         <div class="bottom__copyright copyright">
           <a class="copyright__link" href="#" aria-label="Сайт разработчика">HTML Academy
             <svg class="copyright__link-img" width="27" height="34" role="img">
-              <use href="../img/sprite.svg#logo-html"></use>>
+              <use href="/img/sprite.svg#logo-html"></use>
             </svg>
           </a>
         </div>
