--- a/source/form.html
+++ b/source/form.html
@@ -73,7 +73,7 @@
               <ul class="target__list">
                 <li class="target__item">
                   <label class="target__label" for="lose-weight">
-                    <input class="visually-hidden target__input" type="radio" id="lose-weight" name="target" value="lose-weight" checked disabled>
+                    <input class="visually-hidden target__input" type="radio" id="lose-weight" name="target" value="lose-weight" checked>
                     <span class="target__input-mark"></span>
                     Похудение
                   </label>
@@ -125,7 +125,7 @@
               <ul class="additional__list">
                 <li class="additional__item">
                   <label class="additional__label" for="sweetener">
-                    <input class="visually-hidden additional__input" id="sweetener" name="additional" value="sweetener" type="checkbox" checked disabled>
+                    <input class="visually-hidden additional__input" id="sweetener" name="additional" value="sweetener" type="checkbox" checked>
                     <span class="control-mark-check"></span>
                     Сахарозаменитель
                   </label>
